Snake Game 202 in Progress

--- a/index.html
+++ b/index.html
@@ -19,10 +19,10 @@
         </div>
         
         <div class="collected-words">
-            <div id="word0" class="collected-word"></div>
-            <div id="word1" class="collected-word"></div>
-            <div id="word2" class="collected-word"></div>
-            <div id="word3" class="collected-word"></div>
+            <div id="word0" class="collected-word"><span></span></div>
+            <div id="word1" class="collected-word"><span></span></div>
+            <div id="word2" class="collected-word"><span></span></div>
+            <div id="word3" class="collected-word"><span></span></div>
         </div>
 
         <canvas id="gameCanvas"></canvas>
