--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     <title>成語貪吃蛇</title>
 <link rel="preconnect" href="https://fonts.googleapis.com">
 <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-<link href="https://fonts.googleapis.com/css2?family=Noto+Sans+TC:wght@100..900&display=swap" rel="stylesheet"></head>
+<link href="https://fonts.googleapis.com/css2?family=Kanit:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&family=Noto+Sans+TC:wght@100..900&display=swap" rel="stylesheet">
 <link rel="stylesheet" href="styles.css">
 <body>
     <div class="game-container">
@@ -14,8 +14,11 @@
             <!-- <div class="word-sequence">
                 目標順序：<span id="wordSequence"></span>
             </div> -->
-            <div class="timer">剩餘時間：<span id="timer">1:00</span></div>
-            <div class="score">分數：<span id="score">0</span></div>
+            <div class="timer-container">
+                <div class="timer-text">60</div>
+                <div class="timer-bar"></div>
+            </div>
+            <!-- <div class="score">分數：<span id="score">0</span></div> -->
         </div>
         
         <div class="collected-words">
