--- a/index.html
+++ b/index.html
@@ -69,5 +69,6 @@
         </div>
     </div>
     <script src="game.js"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/howler/2.2.3/howler.min.js"></script>
 </body>
 </html>
