Add Game Logo on main page

--- a/index.html
+++ b/index.html
@@ -10,6 +10,12 @@
 <link rel="stylesheet" href="styles.css">
 <body>
     <div class="game-container">
+        <div class="game-intro">
+            <div class="game-logo">
+                <img src="img/game-logo.png" alt="遊戲標誌">
+            </div>
+            <button id="startButton">開始遊戲</button>
+        </div>
         <div class="game-header">
             <div class="timer-container">
                 <div class="timer-text">60</div>
@@ -53,7 +59,6 @@
         </div>
 
         <div class="controls">
-            <button id="startButton">開始遊戲</button>
             <div class="mobile-controls">
                 <button id="upButton">↑</button>
                 <div class="horizontal-controls">
