檔案分拆階段部份完成 10

--- a/index.html
+++ b/index.html
@@ -50,7 +50,7 @@
         <div id="gameResult" class="game-result hidden">
             <h2 class="game-over-reason"></h2>
             <div class="result-container">
-                <div class="">
+                <div class="score-container">
                     <div class="score-result-container">
                             <div class="score-display">
                             <div class="score-value"><span id="finalScore">0</span></div>
@@ -101,6 +101,7 @@
             
             <div class="result-buttons">
                 <button class="restart-button">重新開始</button>
+                <button class="ranking-button">查看排行榜</button>
             </div>
         </div>
 
