進行分數調整及控制改善 1

--- a/index.html
+++ b/index.html
@@ -64,7 +64,9 @@
             <div class="score-div">
                 <div class="score-result-container">
                         <div class="score-display">
-                        <div class="score-value"><span id="finalScore">0</span></div>
+                        <div class="score-value">
+                            <span id="finalScore">0</span>
+                        </div>
                         <div class="result-table">
                             <table>
                                 <thead>
