--- a/index.html
+++ b/index.html
@@ -9,6 +9,7 @@
 <link href="https://fonts.googleapis.com/css2?family=Bungee+Shade&family=Kanit:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&family=Noto+Sans+TC:wght@100..900&display=swap" rel="stylesheet">
 
 <link rel="stylesheet" href="styles/main.css">
+<link rel="stylesheet" href="styles/components/virtual-joystick.css">
 <body>
     <div id="particles-js"></div>
     
@@ -21,10 +22,13 @@
             <button class="difficulty-btn" data-difficulty="NORMAL">普通</button>
             <button class="difficulty-btn" data-difficulty="HARD">困難</button>
         </div>
-        <div class="remaining-times">遊戲尚餘3次</div>
+
         <div class="game-buttons">
-            <button id="startButton" class="btn-style">開始遊戲</button>
             <button id="settingButton" class="btn-style">遊戲玩法</button>
+            <button id="startButton" class="btn-style">
+                開始遊戲
+                <div class="remaining-times">遊戲尚餘3次</div>
+            </button>
             <button id="rankingButton" class="btn-style">查看排行榜</button>
         </div>
     </div>
@@ -101,7 +105,6 @@
                 <div class="ranking-tabs">
                     <button class="tab-btn active" data-tab="score">最高分數</button>
                     <button class="tab-btn" data-tab="combo">最高連擊</button>
-                    <button class="tab-btn" data-tab="time">最快通關</button>
                 </div>
                 <div class="ranking-content">
                     <div class="ranking-tab active" id="scoreRanking">
@@ -109,9 +112,6 @@
                     </div>
                     <div class="ranking-tab" id="comboRanking">
                         <!-- 動態填充最高連擊排行 -->
-                    </div>
-                    <div class="ranking-tab" id="timeRanking">
-                        <!-- 動態填充最快通關排行 -->
                     </div>
                 </div>
             </div>
@@ -141,12 +141,10 @@
         <section>
             <h2>遊戲玩法</h2>
             <ul>
-                <li>吃下正確祝福詞加 <span class="score-highlight">10分</span>！吃到干擾詞將扣除 <span class="score-highlight">2分</span>！</li>
-                <li></li>
+                <li>吃下正確祝福詞加 <span class="score-highlight">10分</span>！吃到干擾詞將扣除 <span class="score-highlight">5分</span>！</li>
                 <li>生存挑戰：小蛇不能撞到自己的身體，否則遊戲結束！</li>
                 <li>連續吃對祝福詞，得分更快！</li>
                 <li>吃到星星道具，啟動3秒無敵！<img width="50px" src="img/tool-star.png" alt="星星道具">吃到時鐘道具，時間倒數暫停3秒！<img width="50px" src="img/tool-timer.png" alt="時鐘道具"></li>
-                <li></li>
             </ul>
         </section>
 
@@ -177,7 +175,6 @@
             <div class="ranking-tabs">
                 <button class="tab-btn active" data-tab="score">最高分數</button>
                 <button class="tab-btn" data-tab="combo">最高連擊</button>
-                <button class="tab-btn" data-tab="time">最快通關</button>
             </div>
             <div class="ranking-content">
                 <div class="ranking-tab active" id="scoreRanking">
@@ -215,25 +212,6 @@
                             <span class="rank">3</span>
                             <span class="player-name">玩家Z</span>
                             <span class="score">10x</span>
-                        </div>
-                    </div>
-                </div>
-                <div class="ranking-tab" id="timeRanking">
-                    <div class="ranking-list">
-                        <div class="ranking-item">
-                            <span class="rank">1</span>
-                            <span class="player-name">玩家M</span>
-                            <span class="score">1:30</span>
-                        </div>
-                        <div class="ranking-item">
-                            <span class="rank">2</span>
-                            <span class="player-name">玩家N</span>
-                            <span class="score">1:45</span>
-                        </div>
-                        <div class="ranking-item">
-                            <span class="rank">3</span>
-                            <span class="player-name">玩家O</span>
-                            <span class="score">2:00</span>
                         </div>
                     </div>
                 </div>
