Fix Result and Combo Display

--- a/index.html
+++ b/index.html
@@ -72,9 +72,12 @@
         <div class="result-container">
             <div class="score-div">
                 <div class="score-result-container">
-                        <div class="score-display">
-                        <div class="score-value">
-                            <span id="finalScore">0</span>
+                    <div class="score-display">
+                        <div class="score-label-container">
+                            <div class="score-value">
+                                <span id="finalScore">0</span>
+                            </div>
+                            <span class="score-label-text">分數</span>
                         </div>
                         <div class="result-table">
                             <table>
@@ -92,11 +95,7 @@
                 </div>
                 <div class="stats-container">
                     <div class="stat-item">總收集數：<span id="totalCollected">0</span></div>
-                    <div class="stat-item">完美收集：<span id="perfectCollects">0</span></div>
                     <div class="stat-item">最高連擊：<span id="maxCombo">0</span></div>
-                    <div id="bonusesList">
-                        <!-- 動態填充獎勵項目 -->
-                    </div>
                 </div>
             </div>
 
