增加金幣Display方式

--- a/index.html
+++ b/index.html
@@ -94,6 +94,9 @@
                     </div>
                 </div>
                 <div class="stats-container">
+                    <div class="stat-item coins-exchange">
+                        金幣兌換：<span id="totalCoins">0</span>
+                    </div>
                     <div class="stat-item">總收集數：<span id="totalCollected">0</span></div>
                     <div class="stat-item">最高連擊：<span id="maxCombo">0</span></div>
                 </div>
@@ -166,14 +169,14 @@
                             <h2>金幣兌換與上限</h2>
                             <ul> 
                                 <li>金幣獲取：每10分可兌換1個金幣！</li>
-                                <li>每日上限：每天最多可賺取100個金幣，挑戰你的極限！</li>
+                                <li>每場遊戲上限：每場遊戲最多可賺取50個金幣，挑戰你的極限！</li>
                             </ul>
                             <h2>遊戲操作</h2>
                             <ul>
                                 <li>電腦版：用鍵盤的上下左右方向按鍵操控小蛇改變前進方向。</li>
                                 <li>手機及平板版：用虛擬鍵盤按上下左右操控小蛇改變前進方向。</li>
                             </ul>
-                        
+
                         </div>
 
                     </section>
