Improve Game UX

--- a/index.html
+++ b/index.html
@@ -95,7 +95,10 @@
                 </div>
                 <div class="stats-container">
                     <div class="stat-item coins-exchange">
-                        金幣兌換：<span id="totalCoins">0</span>
+                        <div>
+                            金幣兌換：<span id="totalCoins">0</span>
+                            <span class="coins-limit-warning">*你已到達兌換上限</span>
+                        </div>
                     </div>
                     <div class="stat-item">總收集數：<span id="totalCollected">0</span></div>
                     <div class="stat-item">最高連擊：<span id="maxCombo">0</span></div>
@@ -156,6 +159,12 @@
                                 <li>完成練習再加碼：準時完成當天練習，可獲得額外一次挑戰機會，讓你賺更多分！</li>
                             </ul>
 
+                            <h2>遊戲操作</h2>
+                            <ul>
+                                <li>電腦版：用鍵盤的上下左右方向按鍵操控小蛇改變前進方向。</li>
+                                <li>手機及平板版：用虛擬鍵盤按上下左右操控小蛇改變前進方向。</li>
+                            </ul>
+
                             <h2>遊戲玩法</h2>
                             <ul>
                                 <li>祝福詞加分：遊戲畫面左上方有一個特定的新年祝福詞，例如「恭喜發財」，操控小蛇吃下正確的祝福字可得 10分！順序隨意，對了就得分！</li>
@@ -171,11 +180,7 @@
                                 <li>金幣獲取：每10分可兌換1個金幣！</li>
                                 <li>每場遊戲上限：每場遊戲最多可賺取50個金幣，挑戰你的極限！</li>
                             </ul>
-                            <h2>遊戲操作</h2>
-                            <ul>
-                                <li>電腦版：用鍵盤的上下左右方向按鍵操控小蛇改變前進方向。</li>
-                                <li>手機及平板版：用虛擬鍵盤按上下左右操控小蛇改變前進方向。</li>
-                            </ul>
+
 
                         </div>
 
